Widgets alignments solved

--- a/src/modules/transactions/styles.less
+++ b/src/modules/transactions/styles.less
@@ -31,3 +31,9 @@
     }
   }
 }
+
+@media only screen and (min-width: 992px) {
+  .ui.grid > .row > [class*='three wide computer'].column {
+    width: 20% !important;
+  }
+}
